# 2d_ising_in_rust

./: .gitignore  Cargo.toml  README.md
.VSCodeCounter/2025-07-29_19-42-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: pages.yml
calculation_manager/: README.md  default_parameters.py  ising_run_and_plot.ipynb  main.py  pyproject.toml
classical_sim/: Cargo.toml
classical_sim/src/: lib.rs  main.rs  os_based_rng.rs
doc/: index.html  ising_2D.wasm
docs/: index.html  ising_2D.wasm  ising_2D_single_spin.wasm  ising_egui-ab253402f920c173.js  ising_egui-ab253402f920c173_bg.wasm  ising_simulation.wasm  ising_simulation_bg.wasm  macroquad_sim.wasm  manifest.json  mq_js_bundle.js  sw.js
ising_calculation/: Cargo.toml  ising_run_and_plot.ipynb
ising_calculation/.cargo/: config.toml
ising_calculation/results/: montecarlo_parallel_128x128_temp.txt  montecarlo_parallel_16x16_temp.txt  montecarlo_parallel_32x32_temp.txt  montecarlo_parallel_64x64_temp.txt  montecarlo_parallel_8x8_temp.txt
ising_calculation/results/critical_temperatures/: out_128x128.txt  out_16x16.txt  out_32x32.txt  out_64x64.txt  out_8x8.txt  parameter_128x128.txt  parameter_16x16.txt  parameter_32x32.txt  parameter_64x64.txt  parameter_8x8.txt
ising_calculation/results/overview/: out_128x128.txt  out_Lx=16,Ly=16.txt  out_Lx=32,Ly=32.txt  out_Lx=64,Ly=64.txt  out_Lx=8,Ly=8.txt  parameter_128x128.txt  parameter_16x16.txt  parameter_32x32.txt  parameter_64x64.txt  parameter_8x8.txt
ising_calculation/src/: fourier_transformer.rs  lib.rs  main.rs  monte_carlo_results.rs  parameter_handler.py  rng.rs
ising_egui/: Cargo.toml  index.html
ising_egui/src/: lib.rs  main.rs
ising_macroquad/: Cargo.toml
ising_macroquad/src/: macroquad_rng.rs  (+1 more)
ising_simulation/: Cargo.toml  index.html
ising_simulation/src/: app.rs  lib.rs  main.rs
ising_simulation/src/app/: real_time_data_handler.rs  rng.rs  spin_img.rs  texture_finder.rs
low_level_render_target_handler/: Cargo.toml
macroquad_sim/: Cargo.toml
monte_carlo/: Cargo.toml
monte_carlo_lib/: Cargo.toml
os_based_rng/: Cargo.toml
periodic_array_2d/: Cargo.toml
periodic_array_2d_lib/: Cargo.toml
result/: magnetization_10x10_temp_1.00_to_3.00.txt  montecarlo_parallel_10x10_temp_0.00_to_1.00.txt  montecarlo_parallel_10x10_temp_0.00_to_2.00.txt  montecarlo_parallel_10x10_temp_1.00_to_3.00.txt  montecarlo_parallel_2x2_temp_1.00_to_3.00.txt  montecarlo_parallel_8x8_temp_1.80_to_2.77.txt  plot.ipynb  plot.py  plotter.ipynb
src/: lib.rs  main.rs  periodic_array_2d.rs  spin_2d.rs  test.rs
xorshifts/: Cargo.toml  README..md  README.md
xorshifts/src/: lib.rs  xorshift_traits.rs
(+10 files in other folders)
