[package]
name = "ising_calculation"
version = "0.1.0"
edition = "2024"
 
[dependencies]
periodic_array_2d_lib = {path = "../periodic_array_2d_lib" }
monte_carlo_lib       = {path = "../monte_carlo_lib" }
xorshifts             = {path = "../xorshifts"}
num-traits = "0.2.19"
rayon      = "1.11.0"
num = "0.4.3"
parameter_reader = { git = "https://github.com/so-groenen/rust_parameter_reader.git", version = "0.1.0" }

[profile.release]
opt-level = 3
debug = true


