[package]
name = "ising_egui"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

periodic_array_2d_lib = {path = "../periodic_array_2d_lib" }
monte_carlo_lib       = {path = "../monte_carlo_lib" }
os_based_rng      = {path = "../os_based_rng"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom            = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4.50"
web-sys              = "0.3.7"
log                  = "0.4.27"
 
[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
 