[package]
name = "xorshifts"
version = "0.1.0"
edition = "2024"

[dependencies]
periodic_array_2d_lib = {path = "../periodic_array_2d_lib"}
monte_carlo_lib       = {path = "../monte_carlo_lib"}
chrono = "0.4.42"
num-traits = "0.2.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies] 
rand                  = "0.9.2"
